Bugfix: Larger images getting cut off

--- a/src/App.css
+++ b/src/App.css
@@ -120,14 +120,12 @@ main{
     top: 0;
     left: 0;
     backdrop-filter: blur(5px);
-    display: flex;
-    justify-content: center;
     z-index: 9999;
 }
     #zoom-window img{
-        height: 80%;
-        align-self: center;
-        margin-top: 10%;
+        max-height: 80%;
+        max-width: 80%;
+        margin: 5%;
     }
     #zoom-window i{
         position: absolute;
